2012-05-24  Dominique Dumont  <domi.dumont@free.fr> v0.111

    * In t/*.t: Change the way Augeas version is tested to cope with 0.10.0
      (Closes Debian #674390)
    + build-depends on version 0.77

2011-09-21  Dominique Dumont  <domi.dumont@free.fr> v0.110

        * Moosified C::M::Backend::Augeas (fixes Debian #642156)
        * Build.PL:
          + require Any::Moose
          * require Config::Model 1.255


2010-12-13  Dominique Dumont  <dominique.dumont@hp.com> v0.109

        * updated tests to work with Config::Model 1.236
          (fix Ubuntu bug #749108)

2010-12-13  Dominique Dumont  <dominique.dumont@hp.com> v0.108

        * updated tests to work with Config::Model 1.207
        * C::M::B::Augeas: synopsis is now a model snippet
        
2009-05-29  Dominique Dumont  <dominique.dumont@hp.com> v0.107

	* lib/Config/Model/Backend/Augeas.pm (all): Use Log::Log4perl for
	trace with Data::Read and Data::Write categories

2009-05-28  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/Backend/Augeas.pm: replaced obsolete
	config_file parameter with file (Config::Model 0.636)
	(all): ignore Augeas #comment nodes

2009-03-31  Dominique Dumont  <dominique.dumont@hp.com> v0.106

	* t/*.t: fixed tests that broke with Config::Model 0.634
	(Fixes Debian bug #521968)

2009-01-28  Dominique Dumont  <dominique.dumont@hp.com> v0.105

	* t/augeas*.t: Sometimes the Augeas locale bug workaround also
	needs LC_ALL=C.

2009-01-27  Dominique Dumont  <dominique.dumont@hp.com> v0.104

	* lib/Config/Model/Backend/Augeas.pm (write): Do no create
	directory to store config files. Creating dir for file is Augeas
	problem in this backend.

2009-01-25  Dominique Dumont  <domi.dumont@free.fr> v0.103

	* t/augeas_backend.t: Added workaround Augeas locale bug so that
	tests can be run on amd64 arch. The workaround re-run tests with
	LANG=C environment

2009-01-19  Dominique Dumont  <dominique.dumont@hp.com> v0.102
