@@ -8,9 +8,9 @@ build_requires:
   Test::Warn: 0.11
   version: 0.77
 configure_requires:
-  Module::Build: 0.4
+  Module::Build: 0.40
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.4001, CPAN::Meta::Converter version 2.120921'
 license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,7 +19,7 @@ name: Config-Model-Backend-Augeas
 provides:
   Config::Model::Backend::Augeas:
     file: lib/Config/Model/Backend/Augeas.pm
-    version: 0.111
+    version: 0.112
 requires:
   Any::Moose: 0
   Config::Augeas: 0.303
@@ -28,4 +28,4 @@ requires:
   Log::Log4perl: 1.11
 resources:
   license: http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt
-version: 0.111
+version: 0.112
