@@ -1,3 +1,9 @@
+2012-07-09  Dominique Dumont  <domi.dumont@free.fr> v0.112
+
+    * tests: Fixe broken test by changing the way the tests retrieve 
+      node's backend manager (from $node->{bmgr} to $node->backend_mgr) 
+      Closes Debian #680821
+
 2012-05-24  Dominique Dumont  <domi.dumont@free.fr> v0.111
 
     * In t/*.t: Change the way Augeas version is tested to cope with 0.10.0
